update about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,6 +524,7 @@ section .container {
 .interests .icon-box {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   padding: 20px;
   background: rgba(255, 255, 255, 0.08);
   transition: ease-in-out 0.3s;
